--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
   },
   "dependencies": {
     "keymirror": "^0.1.1",
-    "lodash": "^3.10.1",
-    "react": "15.3.1",
-    "react-native": "0.33.0",
+    "lodash": "^4.17.4",
+    "react": "15.4.2",
+    "react-native": "0.41.2",
     "react-native-configs": "^1.1.0",
     "react-native-tab-bar": "^1.2.1",
-    "react-native-vector-icons": "^2.0.3",
-    "react-redux": "^4.4.5",
-    "recompose": "^0.20.2",
+    "react-native-vector-icons": "^4.0.0",
+    "react-redux": "^5.0.2",
+    "recompose": "^0.22.0",
     "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "undefined": "^0.1.0"
   },
   "devDependencies": {
-    "react-native-cli": "^1.0.0"
+    "react-native-cli": "^2.0.1"
   }
 }
